@@ -33,6 +33,10 @@ under the License.
 	<name>Flink : E2E Tests : Opensearch</name>
 	<packaging>jar</packaging>
 
+	<properties>
+		<surefire.module.config><!-- Required by OpensearchDynamicSinkITCase
+		--> --add-opens=java.base/java.util=ALL-UNNAMED </surefire.module.config>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
@@ -154,9 +158,45 @@ under the License.
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.0.0-M5</version>
+						<configuration>
+							<!-- enables TCP/IP communication between surefire and forked JVM-->
+							<forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+							<trimStackTrace>false</trimStackTrace>
+							<systemPropertyVariables>
+								<forkNumber>0${surefire.forkNumber}</forkNumber>
+								<!-- $$ ensures that surefire resolves this to the current forkNumber,
+									 instead of maven during initialization -->
+								<mvn.forkNumber>$${surefire.forkNumber}</mvn.forkNumber>
+								<user.country>US</user.country>
+								<user.language>en</user.language>
+								<project.basedir>${project.basedir}</project.basedir>
+								<junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
+							</systemPropertyVariables>
+							<argLine>-Xms256m -Xmx2048m -XX:+UseG1GC ${flink.surefire.baseArgLine}</argLine>
+						</configuration>
 						<executions>
 							<execution>
-								<id>end-to-end-tests</id>
+								<!--execute all the unit tests-->
+								<id>default-test</id>
+								<phase>test</phase>
+								<goals>
+									<goal>test</goal>
+								</goals>
+								<configuration>
+									<includes>
+										<include>${test.unit.pattern}</include>
+									</includes>
+									<excludes>
+										<exclude>${additionalExcludes}</exclude>
+									</excludes>
+									<forkCount>${flink.forkCountUnitTest}</forkCount>
+									<argLine>${flink.surefire.baseArgLine} -Xmx${flink.XmxUnitTest}</argLine>
+								</configuration>
+							</execution>
+							<execution>
+								<!--execute all the integration tests-->
+								<id>integration-tests</id>
 								<phase>integration-test</phase>
 								<goals>
 									<goal>test</goal>
@@ -165,13 +205,18 @@ under the License.
 									<includes>
 										<include>**/*.*</include>
 									</includes>
-									<systemPropertyVariables>
-										<moduleDir>${project.basedir}</moduleDir>
-									</systemPropertyVariables>
+									<excludes>
+										<exclude>${test.unit.pattern}</exclude>
+										<exclude>${additionalExcludes}</exclude>
+									</excludes>
+									<forkCount>${flink.forkCountITCase}</forkCount>
+									<argLine>${flink.surefire.baseArgLine} -Xmx${flink.XmxITCase}</argLine>
+									<reuseForks>false</reuseForks>
 								</configuration>
 							</execution>
 						</executions>
 					</plugin>
+
 				</plugins>
 			</build>
 		</profile>
